# YuanBot

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  DESIGN.md  Dockerfile  LICENSE  README.md  docker-compose.yaml  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  docs-vitepress-deploy.yml  docs.yml  pr-review.yml  publish.yml
configs/: bot.yaml  database.yaml  default.yaml  extensions.yaml  memory.yaml  serverless.yaml  tts.yaml
configs/Channels/: dingtalk.yaml  discord.yaml  feishu.yaml  napcat.yaml  qq.yaml  telegram.yaml  webchat.yaml  wechat.yaml  wecom.yaml
configs/Personas/: cheerful.yaml  default.yaml  gentle.yaml  mentor.yaml
configs/Plugins/decision/: README.md
configs/Plugins/skills/: bedtime_story.yaml  creative_storytelling.yaml  daily_chat.yaml  emotional_comfort.yaml
configs/Plugins/tools/: get_weather.yaml  search.yaml  set_reminder.yaml
configs/Providers/: anthropic.yaml  claude.yaml  deepseek.yaml  glm.yaml  hunyuan.yaml  kimi.yaml  mimo.yaml  ollama.yaml  openai.yaml  qwen.yaml
configs/grafana/dashboards/: yuanbot-logs.json
configs/loki/: loki-config.yaml  promtail-config.yaml
docs/: adapter-ai-spec.md  adapter-channel-spec.md  ai-provider-system-v2.md  ai-provider-system.md  api-reference.md  architecture-v1.4.md  architecture-v1.5.md  architecture-v1.7.md  architecture.md  capability-tool-system.md  configuration.md  conformance-report-v2.md  conformance-report-v3.md  conformance-report-v5.md  conformance-report-v6.md  conformance-report-v7.md  conformance-report.md  deployment.md  design-review-report-v2.md  design-review-report-v3.md  design-review-report-v4.md  design-review-report.md  development-standards-ecosystem.md  development.md  gateway-communication-system.md  getting-started.md  index.md  infrastructure-deployment-system.md  m2-development-plan.md  memory-emotion-system.md  operations-guide.md  persona-decision-system.md  proactive-companion-system.md  refactor-plan.md  tts-system.md  user-interface-system.md
docs-vitepress/: .build-trigger  index.md  package-lock.json  package.json
docs-vitepress/.vitepress/: config.mts
docs-vitepress/api/: reference.md
docs-vitepress/channels-apis/: README.md
docs-vitepress/community/: contributing.md
docs-vitepress/en/: index.md
docs-vitepress/en/api/: reference.md
docs-vitepress/guide/: configuration.md  getting-started.md  installation.md
docs-vitepress/ja/: index.md
docs/channels-apis/: napcat-api.md  openclaw-weixin-api.md
docs/stylesheets/: extra.css
docx/: adapter-ai-spec.md  architecture-design.md
examples/: memory_demo.py
k8s/: deployment.yaml
nginx/: nginx.conf
public/: 404.html  index.html  sitemap.xml
public/adapter-ai-spec/: index.html
public/adapter-channel-spec/: index.html
public/ai-provider-system/: index.html
public/ai-provider-system-v2/: index.html
public/api-reference/: index.html
public/architecture/: index.html
public/architecture-v1.4/: index.html
public/architecture-v1.5/: index.html
public/capability-tool-system/: index.html
public/configuration/: index.html
public/conformance-report/: index.html
public/conformance-report-v3/: index.html
public/conformance-report-v5/: index.html
public/deployment/: index.html
public/design-review-report/: index.html
public/design-review-report-v2/: index.html
public/design-review-report-v3/: index.html
public/design-review-report-v4/: index.html
public/development/: index.html
public/development-standards-ecosystem/: index.html
public/gateway-communication-system/: index.html
public/getting-started/: index.html
public/infrastructure-deployment-system/: index.html
public/memory-emotion-system/: index.html
public/operations-guide/: index.html
public/overrides/: home.html
public/persona-decision-system/: index.html
public/proactive-companion-system/: index.html
public/refactor-plan/: index.html
public/search/: search_index.json
public/stylesheets/: extra.css
public/tts-system/: index.html
public/user-interface-system/: index.html
scripts/: download_intent_model.py  extract_changelog.py  update_changelog_date.py  wechat_login.py
src/yuanbot/: __init__.py  app.py  cli.py  config.py
src/yuanbot_testkit/: __init__.py  fixtures.py  mock_adapter.py  mock_core.py
tests/: conftest.py  test_app.py  test_config.py  test_integration.py
tests/test_adapters/: test_anthropic_adapter.py  test_deepseek_adapter.py  test_dingtalk_adapter.py  test_discord_adapter.py  test_feishu_adapter.py  test_ollama_adapter.py  test_openai_adapter.py  test_qq_adapter.py  test_telegram_adapter.py  test_web_adapter.py  test_wechat_adapter.py  test_wecom_adapter.py
tests/test_auth/: test_routes.py  test_setup.py  test_store.py
tests/test_core/: test_types.py  test_types_comprehensive.py
tests/test_gateway/: test_gateway.py  test_privacy.py
tests/test_infrastructure/: test_alerting.py  test_backup.py  test_graph_store.py  test_infrastructure.py  test_logging_config.py  test_migration.py
tests/test_memory/: test_emotion_tracker.py  test_manager.py  test_manager_comprehensive.py
tests/test_orchestrator/: test_engine.py
tests/test_persona/: test_decision_plugin.py  test_default.py  test_intent_model.py  test_persona_engines.py  test_persona_manager.py
tests/test_proactive/: __init__.py  test_event_engine.py  test_proactive.py  test_retry_queue.py  test_scheduler.py  test_strategy.py  test_trigger.py
tests/test_providers/: test_providers.py
tests/test_services/: test_domain_matcher.py  test_extension_standard.py  test_marketplace.py  test_progressive_loader.py  test_reviews.py  test_skill_chain.py
tests/test_skills/: test_manager.py
tests/test_testkit/: __init__.py  conftest.py  test_fixtures.py  test_mock_adapter.py  test_mock_core.py
tests/test_tools/: test_manager.py  test_wasm_sandbox.py
tests/test_tts/: test_tts.py
webui/: index.html  package-lock.json  package.json  vite.config.ts
webui/src/: App.vue  router.ts  style.css
yuanbot-cli/: README.md  pyproject.toml
yuanbot-cli/src/yuanbot_cli/: __init__.py  __main__.py  cli.py
(+216 files in other folders)
