[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "yuanbot"
version = "1.0.0"
description = "缘·Bot (YuanBot) - AI 虚拟伴侣系统"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.0",
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "httpx>=0.27",
    "redis>=5.0",
    "asyncpg>=0.29",
    "qdrant-client>=1.9",
    "neo4j>=5.0",
    "numpy>=1.26",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "structlog>=24.1",
    "aiohttp>=3.9",
    "croniter>=2.0",
    "aiosqlite>=0.20",
    "prometheus-client>=0.20",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
]
openai = ["openai>=1.30"]
anthropic = ["anthropic>=0.28"]
milvus = ["pymilvus>=2.4"]
graph = ["kuzu>=0.7"]
cli = ["click>=8.0"]
all-providers = [
    "yuanbot[openai,anthropic]",
]
all = [
    "yuanbot[openai,anthropic,milvus,graph,cli]",
]

[project.scripts]
yuanbot = "yuanbot.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/yuanbot"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
