[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "yuanbot"
version = "1.2.2"
description = "缘·Bot (YuanBot) - AI 虚拟伴侣系统"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
dependencies = [
    # ── 核心框架 ──
    "pydantic>=2.0",
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "httpx>=0.27",
    # ── AI (DeepSeek 默认提供商依赖 OpenAI API) ──
    "openai>=1.30",
    # ── 配置与日志 ──
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "structlog>=24.1",
    # ── 基础设施 ──
    "croniter>=2.0",
    "aiosqlite>=0.20",
    "prometheus-client>=0.20",
    "psutil>=5.0",
]

[project.optional-dependencies]
# ── 开发工具 ──
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "bcrypt>=4.0",
    "PyJWT>=2.8",
    "httpx>=0.27",
]

# ── 消息通道依赖 ──
wechat = ["cryptography>=42.0"]
napcat = []  # 纯 stdlib + 现有 deps，无额外依赖
discord = ["websockets>=12.0"]
qq = ["websockets>=12.0"]

# ── 数据库依赖 ──
mysql = ["aiomysql>=0.2", "pymysql>=1.0", "asyncpg>=0.29"]
redis = ["redis>=5.0"]
milvus = ["pymilvus>=2.4"]
qdrant = ["qdrant-client>=1.9"]
graph = ["kuzu>=0.7", "neo4j>=5.0"]

# ── AI 提供商 ──
openai = ["openai>=1.30"]
anthropic = ["anthropic>=0.28"]
all-providers = ["openai>=1.30", "anthropic>=0.28"]

# ── 能力增强 ──
cli = ["rich>=13.0", "textual>=1.0"]
tts = ["edge-tts>=6.0", "piper-tts>=1.0"]
onnx = ["onnxruntime>=1.17", "tokenizers>=0.19", "joblib>=1.3"]
jwt = ["PyJWT>=2.8"]
grpc = ["grpcio>=1.60", "grpcio-tools>=1.60"]
wasm = ["wasmtime>=20.0"]
serverless = ["mangum>=0.17"]
numpy = ["numpy>=1.26"]
gateway = ["PyNaCl>=1.5"]

# ── 全量安装 ──
all = [
    "openai>=1.30", "anthropic>=0.28",
    "pymilvus>=2.4", "qdrant-client>=1.9",
    "kuzu>=0.7", "neo4j>=5.0",
    "rich>=13.0", "textual>=1.0",
    "edge-tts>=6.0", "piper-tts>=1.0",
    "aiomysql>=0.2", "pymysql>=1.0", "asyncpg>=0.29",
    "redis>=5.0",
    "PyJWT>=2.8", "PyNaCl>=1.5",
    "onnxruntime>=1.17", "tokenizers>=0.19", "joblib>=1.3",
    "grpcio>=1.60", "grpcio-tools>=1.60",
    "wasmtime>=20.0", "mangum>=0.17",
    "numpy>=1.26",
    "websockets>=12.0",
    "cryptography>=42.0",
]

[project.scripts]
yuanbot = "yuanbot.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/yuanbot", "src/yuanbot_testkit"]

[tool.ruff]
target-version = "py312"
line-length = 100
exclude = ["src/yuanbot/tools/proto/*", "tests/*", "scripts/*"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
